# thrustered_vehicle_motioncontroller

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  motion_controller_pybind.cpp  motion_controller_pybind.h  thrustered_vehicle_motion_controller.cpp  thrustered_vehicle_motion_controller.h  vehicle_config.h
thrusters_controller/: thrusters_controller.cpp  thrusters_controller.h
